# brinjal

./: .gitignore  MANIFEST.in  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml  pytest.ini  run_tests.py  zensical.toml
.cursor/rules/: python.mdc
.github/workflows/: docs.yml  main.yml
docs/: api-reference.md  error-handling.md  getting-started.md  index.md  integration.md  recurring-tasks.md  task-development.md  task-management.md
docs/stylesheets/: extra.css
src/brinjal/: __init__.py  _version.py  main.py  manager.py  models.py  registry.py  task.py
src/brinjal/api/: router.py
src/brinjal/api/static/: TaskList.js  test.html
tests/: test_api_router.py  test_error_handling.py  test_example_task.py  test_recurring_tasks.py  test_registry.py  test_semaphore_concurrency.py  test_task_manager.py  test_task_pruning.py
