[project]
name = "brinjal"
version = "0.1.0"
description = "A generic, reusable task management system built with FastAPI and asyncio"
readme = "README.md"
authors = [
    { name = "Srinivas Gorur-Shandilya", email = "code@srinivas.gs" }
]
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.21.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]
keywords = ["task-management", "fastapi", "asyncio", "sse", "progress-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Framework :: FastAPI",
]

[project.scripts]
brinjal = "brinjal:main"

[project.urls]
Homepage = "https://github.com/sg-s/brinjal"
Documentation = "https://sg-s.github.io/brinjal"
Repository = "https://github.com/sg-s/brinjal"
Issues = "https://github.com/sg-s/brinjal/issues"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
build = [
    "build>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brinjal"]

[tool.hatch.build.targets.wheel.sources]
"src/brinjal" = "brinjal"

[tool.hatch.build.targets.wheel.include]
"src/brinjal/api/static" = "brinjal/api/static"
