[project]
name = "brinjal"
dynamic = ["version"]
description = "A generic, reusable task management system built with FastAPI and asyncio"
readme = "README.md"
authors = [
    { name = "Srinivas Gorur-Shandilya", email = "code@srinivas.gs" }
]
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.21.0",
    "croniter>=2.0.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]
keywords = ["task-management", "fastapi", "asyncio", "sse", "progress-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Framework :: FastAPI",
]


[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "jupyter-black>=0.4.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=1.1.0",
]
docs = [
    "black>=25.1.0",
    "mkdocs-mermaid2-plugin",
    "mkdocs>=1.6.1",
    "mkdocs-material>=8.2.0",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings>=0.28.0",
    "mkdocstrings-python>=1.14.4",
]


[project.urls]
Homepage = "https://github.com/sg-s/brinjal"
Documentation = "https://sg-s.github.io/brinjal"
Repository = "https://github.com/sg-s/brinjal"
Issues = "https://github.com/sg-s/brinjal/issues"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]
build = [
    "build>=1.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brinjal"]

[tool.hatch.build.targets.wheel.sources]
"src/brinjal" = "brinjal"

[tool.hatch.build.targets.wheel.include]
"src/brinjal/api/static" = "brinjal/api/static"





[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/brinjal/_version.py"


[tool.coverage.run]
omit = [
    "tests/*.py",
]


[tool.interrogate]
fail-under = 100
exclude = ["setup.py", "docs", "build","tests","variables","conftest.py", "src/brinjal/_version.py", "**/_version.py"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = false
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
color = true

[tool.ruff]
include = [
    "**/src/**/*.py",
    "**/tests/**/*.py",
]

[tool.ruff.lint]
ignore = ["E203", "E266", "E501"]

[tool.ruff.lint.isort]
case-sensitive = true
